# medallion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT  Makefile  README.md  Reverse Engineering the Medallion Fund.docx  medallion_fund_reconstruct.md  pyproject.toml  slack_problem.md
.cursor/rules/: git-release.mdc
.github/workflows/: ci.yml  link-check.yml  quarto-publish.yml
data/: bibliography.yaml  evidence.yaml  manifest.yaml  signals.yaml
docs/: agent-git-policy.md  architecture.md  charter.md  disclaimer.md  evidence_rubric.md  publishing.md  qa_manual_checklist.md  requirements.md  test_plan.md  traceability.md
docs/qa_reports/: 2026-05-28.md  2026-05-29.md
experiments/03_mean_reversion/: README.md  contract.yaml  run.py
experiments/04_almgren_chriss/: README.md  contract.yaml  run.py
quarto/: _quarto.yml  about.qmd  index.qmd  intro.qmd
r/: cointegration_example.R
schemas/: bibliography_source.schema.json  data_availability_row.schema.json  evidence_record.schema.json  experiment_contract.schema.json  signal_hypothesis.schema.json
scripts/: build_quarto_assets.py  check_bibliography.sh  check_claim_links.sh  check_quarto_warnings.sh  claim_audit.py  migrate_bib_citations.py  patch_bib_external_links.py  rubric_lint.py  sample_evidence.py  validate_bibliography.py  validate_data_matrix.py  validate_evidence_coverage.py  validate_experiment_contracts.py  validate_experiment_summaries.py  validate_signals.py  verify_bibliography_urls.py
tests/: test_evidence.py  test_qa_scripts.py  test_simulation.py
(+66 files in other folders)
